--- a/config/rubber/rubber.yml
+++ b/config/rubber/rubber.yml
@@ -1,12 +1,12 @@
 # REQUIRED: The name of your application
-app_name: your_app_name
+app_name: blog
 
 # REQUIRED: The system user to run your app servers as
-app_user: app
+app_user: blog
 
 # REQUIRED: Notification emails (e.g. monit) get sent to this address
 #
-admin_email: root@localhost
+admin_email: flankerfc@gmail.com
 
 # OPTIONAL: If not set, you won't be able to access web_tools
 # server (munin stats, monit status, etc)
@@ -18,7 +18,7 @@ timezone: US/Eastern
 
 # REQUIRED: the domain all the instances should be associated with
 #
-domain: foo.com
+domain: chaojiwudi.com
 
 # OPTIONAL: See rubber-dns.yml for dns configuration
 # This lets rubber update a dynamic dns service with the instance alias
@@ -45,13 +45,15 @@ cloud_providers:
     # ap-southeast-1.ec2.amazonaws.com
     # ap-southeast-2.ec2.amazonaws.com
     #
-    server_endpoint: us-east-1.ec2.amazonaws.com
+    server_endpoint: us-west-1.ec2.amazonaws.com
     
     # REQUIRED The amazon keys and account ID (digits only, no dashes) used to access the AWS API
     #
-    access_key: XXX
-    secret_access_key: YYY
-    account: ZZZ
+    account_file: ~/.session_ec2_account
+
+    access_key: "#{YAML.load_file(File.expand_path(cloud_providers.aws.account_file))[:access_key]}"
+    secret_access_key: "#{YAML.load_file(File.expand_path(cloud_providers.aws.account_file))[:secret_access_key]}"
+    account: "#{YAML.load_file(File.expand_path(cloud_providers.aws.account_file))[:account]}"
 
     # REQUIRED:  The name of the amazon keypair and location of its private key
     #
@@ -60,8 +62,8 @@ cloud_providers:
     # extension ".pub".  The easiest way to get your hand on this is to create the
     # public key from the private key: ssh-keygen -y -f gsg-keypair > gsg-keypair.pub
     #
-    key_name: gsg-keypair
-    key_file: "#{Dir[(File.expand_path('~') rescue '/root') + '/.ec2/*' + cloud_providers.aws.key_name].first}"
+    key_name: tw_temp
+    key_file: "#{Dir[(File.expand_path('~') rescue '/root') + '/.ssh/*' + cloud_providers.aws.key_name + '*'].first}"
 
     # OPTIONAL: Needed for bundling a running instance using rubber:bundle
     #
@@ -78,8 +80,8 @@ cloud_providers:
     # Ubuntu 10.04 Lucid	base install	64-bit	ami-fa01f193
     #
     # m1.small or m1.large or m1.xlarge
-    image_type: m1.small
-    image_id: "#{ %w{m1.small c1.medium}.include?(image_type) ? 'ami-7000f019' : 'ami-fa01f193' }"
+    image_type: m1.large
+    image_id: ami-cba1fe8e
 
     # OPTIONAL: EC2 spot instance request support.
     #
@@ -121,17 +123,17 @@ assigned_security_groups: [default]
 # OPTIONAL: Automatically create security groups for each host and role
 # EC2 doesn't allow one to change what groups an instance belongs to after
 # creation, so its good to have some empty ones predefined.
-auto_security_groups: true
+# auto_security_groups: true
 
 # OPTIONAL: Automatically isolate security groups for each appname/environment
 # by mangling their names to be appname_env_groupname
 # This makes it safer to have staging and production coexist on the same EC2
 # account, or even multiple apps
-isolate_security_groups: true
+# isolate_security_groups: true
 
 # OPTIONAL: Prompts one to sync security group rules when the ones in amazon
 # differ from those in rubber
-prompt_for_security_group_sync: true
+# prompt_for_security_group_sync: true
 
 # OPTIONAL: The packages to install on all instances
 # You can install a specific version of a package by using a sub-array of pkg, version
