--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ rvm:
   - 2.0.0
 env:
   - DB=sqlite
+install: 'bin/wad'
 script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake
+env:
+  global:
+    - S3_REGION=us-west-1
+    - S3_BUCKET_NAME=fengzhichao-gems
